# POO2021-1STQ

Herz_El_Imparable/: CMakeLists.txt  Diagrama de clases.drawio
Herz_El_Imparable/Codigo/: Diagrama de clases.drawio  main.cpp
Herz_El_Imparable/Codigo/Controller/: Controller.cpp  Controller.h
Herz_El_Imparable/Codigo/Model/: Espacio.h
Herz_El_Imparable/Codigo/Model/Entidades/: Entidad.h
Herz_El_Imparable/Codigo/Model/Items/: ArtefactoLegendario.h
Herz_El_Imparable/Codigo/Model/Mazmorra/: Mazmorra.h  Pared.cpp
Herz_El_Imparable/Codigo/View/: View.cpp  View.h
Herz_El_Imparable/Controller/: Controller.cpp  Controller.h
Herz_El_Imparable/Historia del videojuego/: Historia del videojuego.docx
Herz_El_Imparable/Informes de autoevaluación/: Informe de autoevaluación - Johann Ruano.docx  Informe de autoevaluación - Sebastian Tobar.docx
Herz_El_Imparable/Manual técnico/: Explicación de las funcionalidades.docx
Herz_El_Imparable/Model/: Arma.cpp  Arma.h  ArtefactoLegendario.cpp  ArtefactoLegendario.h  Enemigo.cpp  Enemigo.h  Espacio.cpp  Espacio.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Mazmorra.cpp  Mazmorra.h  Pared.cpp  Pared.h  Pocion.cpp  Pocion.h
Herz_El_Imparable/Model/Entidades/: Entidad.cpp  Entidad.h
Herz_El_Imparable/Model/Entidades/Enemigos/: Enemigo.cpp  Enemigo.h
Herz_El_Imparable/Model/Entidades/Jugador/: Jugador.cpp  Jugador.h
Herz_El_Imparable/Model/Items/: ArtefactoLegendario.cpp  ArtefactoLegendario.h  Item.cpp  Item.h
Herz_El_Imparable/Model/Mazmorra/: Mazmorra.cpp  Mazmorra.h  Pared.h
Herz_El_Imparable/View/: View.cpp
(+72 files in other folders)
